--- a/ra/admin/templates/ra/report.html
+++ b/ra/admin/templates/ra/report.html
@@ -12,58 +12,98 @@
     </ul>
 
 {% endblock %}
+
 {% block content %}
 
     {% if form %}
         <h4>Filters</h4>
-        <form>
+        <form id="reportForm">
             {% crispy form form.get_crispy_helper %}
-            <input type="submit" value="Filter" class="btn btn-primary btn-lg btn-block refreshReport">
+            <input type="submit" value="Filter" class="btn btn-primary btn-lg btn-block refreshReport ">
         </form>
     {% endif %}
     <h4 class="py-5">Results</h4>
     <div class="card" id="{{ report_data.report_slug }}">
-        <div class="card-body">
-            <div class="chartContainer screenOnly">
-                <div class="controls text-center">
-                    <ul class="nav-charts list-inline">
+    <div class="card-body">
+        <div data-report-widget
+             data-report-url="{{ report.get_url }}"
+             data-extra-params="{{ data_extra_param|default:'' }}"
+             data-success-callback="{{ data_success_callback|default:'' }}"
+             report-form-selector="#reportForm"
 
-                        {% for chart in report_data.chart_settings %}
-                            <li class="list-inline-item">
-                                <a href="#" data-chart-id="{{ chart.id }}" data-charts-engine="{{ chart.engine_name }}">
-                                    {% if chart.type == 'pie' %}
-                                        <i class="fa fa-pie-chart"></i>
-                                    {% elif chart.type == 'line' %}
-                                        <i class="fa fa-line-chart"></i>
-                                    {% else %}
-                                        <i class="fa fa-bar-chart"></i>
-                                    {% endif %} {{ chart.title }}
-                                </a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="reportChart screenOnly" dir="ltr"></div>
-                {% if report_data.chart_settings %}
-                    {#                    #}
-                    {% if report_data.charts_engine == 'chartsjs' %}
-                        <canvas width="400" height="100"></canvas>
-                    {% elif report_data.charts_engine == 'highcharts' %}
-                        {#                        <div id="highchartContainer" style="width:100%; height:400px;"></div>#}
-                    {% endif %}
+                {#             data-chart-id="{{ data_chart_id|default:'' }}"#}
+        >
+            {% if report.chart_settings and not no_chart %}
+                <div id="container" data-report-chart style="width:100%; height:400px;"></div>
+                {#                <canvas data-report-chart height="100"></canvas>#}
+            {% endif %}
+            <div data-report-table>
 
-
-                {% endif %}
-            </div>
-            <div class="report-table">
-                {% include 'slick_reporting/table.html' with table=report_data %}
             </div>
         </div>
+
+
+        {#            <div class="chartContainer screenOnly">#}
+        {#                <div class="controls text-center">#}
+        {#                    <ul class="nav-charts list-inline">#}
+        {##}
+        {#                        {% for chart in report_data.chart_settings %}#}
+        {#                            <li class="list-inline-item">#}
+        {#                                <a href="#" report-chart-id="{{ chart.id }}"#}
+        {#                                   data-charts-engine="{{ chart.engine_name }}">#}
+        {#                                    {% if chart.type == 'pie' %}#}
+        {#                                        <i class="fa fa-pie-chart"></i>#}
+        {#                                    {% elif chart.type == 'line' %}#}
+        {#                                        <i class="fa fa-line-chart"></i>#}
+        {#                                    {% else %}#}
+        {#                                        <i class="fa fa-bar-chart"></i>#}
+        {#                                    {% endif %} {{ chart.title }}#}
+        {#                                </a></li>#}
+        {#                        {% endfor %}#}
+        {#                    </ul>#}
+        {#                </div>#}
+        {#                <div class="reportChart screenOnly" dir="ltr"></div>#}
+        {#                {% if report_data.chart_settings %}#}
+        {#                    #}
+        {#                    {% if report_data.charts_engine == 'chartsjs' %}#}
+        {#                        <canvas width="400" height="100"></canvas>#}
+        {#                    {% elif report_data.charts_engine == 'highcharts' %}#}
+        {#                        <div id="highchartContainer" style="width:100%; height:400px;"></div>#}
+        {#                    {% endif %}#}
+        {##}
+        {##}
+        {#                {% endif %}#}
+        {#            </div>#}
+        {#            <div class="report-table">#}
+        {#                {% include 'slick_reporting/table.html' with table=report_data %}#}
+        {#            </div>#}
+        {#        </div>#}
     </div>
 
 
 {% endblock %}
 {% block extrajs %}
-    <script src="https://code.highcharts.com/highcharts.js"></script>
+    {{ block.super }}
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"
+            integrity="sha384-JnbsSLBmv2/R0fUmF2XYIcAEMPHEAO51Gitn9IjL4l89uFTIgtLF1+jqIqqd9FSk"
+            crossorigin="anonymous"></script>
+
+    <script>$(document).ready(function () {
+        $('select').select2();
+
+
+    })</script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
+
+
+    {# datatable #}
+    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+
+    {#    <script src="https://code.highcharts.com/highcharts.js"></script>#}
     <script src="{% static 'slick_reporting/main.js' %}"></script>
     <script src="{% static 'slick_reporting/ra.chartsjs.js' %}"></script>
     <script src="{% static 'slick_reporting/ra.highchart.js' %}"></script>
@@ -71,9 +111,12 @@
 
     <script>
         $(document).ready(function () {
-            let data = {{ report_data|jsonify }};
+            $('.refreshReport').on('click', function (event) {
+                event.preventDefault();
+                let $elem = $('[data-report-widget]')
+                $.ra.report_loader.refreshReportWidget($elem)
+            });
 
-            let chartContainer = $('.reportChart')
 
             function setDatePicker() {
                 function setDatePickerObj() {
@@ -144,46 +187,6 @@
 
             }
 
-            $('.chartContainer').on('click', '.nav-charts a', function (e) {
-                e.preventDefault();
-                let $this = $(this);
-                let charts_engine = $this.attr('data-charts-engine');
-
-                if (charts_engine === 'chartsjs') {
-                    displayChartChartsJs($this)
-                } else if (charts_engine === 'highcharts') {
-                    {#displayChartChartsJs($this)#}
-                    displayCHartHighcharts($this);
-                }
-
-                let ul = $this.parents('ul');
-                ul.find('li').removeClass('active'); //remove old active classes
-                ul.find('li[data-chart-id=' + $this.attr("data-chart-id") + ']').addClass('active'); // set the new active class
-
-
-            });
-
-            function displayCHartHighcharts($this) {
-                chartContainer.empty();
-                chartContainer.append('<div id="highchartContainer" style="width:100%; height:400px;"></div>')
-
-                let chart = chartContainer.find('#highchartContainer');
-                let chartObject = $.slick_reporting.highcharts.createChartObject(data, $this.attr('data-chart-id'));
-                chart.highcharts(chartObject)
-
-            }
-
-            function displayChartChartsJs($this) {
-                chartContainer.empty();
-                chartContainer.append('<canvas  width="400" height="100"></canvas>')
-                var $chart = chartContainer.find('canvas');
-                let chartObject = $.slick_reporting.chartsjs.createChartObject(data, $this.attr('data-chart-id'), {});
-                myChart = new Chart($chart, chartObject);
-
-            }
-
-            $('table').DataTable();
-            $('.nav-charts').find('a:first').trigger('click');
             setDatePicker();
 
 
