--- a/erp_framework/admin/templates/_ra/sidebar.html
+++ b/erp_framework/admin/templates/_ra/sidebar.html
@@ -1,4 +1,4 @@
-{% load static i18n  jazzmin admin_urls ra_admin_tags %}
+{% load static i18n  jazzmin admin_urls erp_reporting_tags %}
 {% if jazzmin_settings.show_sidebar %}
     {% get_side_menu as side_menu_list %}
 
