--- a/erp_framework/admin/templates/ra/view.html
+++ b/erp_framework/admin/templates/ra/view.html
@@ -1,6 +1,6 @@
-{% extends 'ra/base_site.html' %}
+{% extends 'erp_framework/base_site.html' %}
 {#{% extends "admin/base_site.html" %}#}
-{% load ra_admin_tags ra_tags i18n admin_urls %}
+{% load erp_reporting_tags ra_tags i18n admin_urls %}
 
 {% block content_title %} {{ title }}{% endblock %}
 {% block breadcrumbs %}
