--- a/erp_framework/erp/expense/templates/ra/expense/expense/view.html
+++ b/erp_framework/erp/expense/templates/ra/expense/expense/view.html
@@ -1,5 +1,5 @@
 {% extends 'ra/view.html' %}
-{% load ra_admin_tags ra_tags i18n admin_urls %}
+{% load erp_reporting_tags ra_tags i18n admin_urls %}
 
 
 
