--- a/tests/reporting_tests/templates/client_view.html
+++ b/tests/reporting_tests/templates/client_view.html
@@ -1,6 +1,6 @@
 {% extends 'ra/view.html' %}
 
-{% load ra_admin_tags %}
+{% load erp_reporting_tags %}
 
 {% block content %}
     <h2>Balance is <span class="clientBalance"></span></h2>
