--- a/erp_framework/admin/templates/_ra/change_form.html
+++ b/erp_framework/admin/templates/_ra/change_form.html
@@ -1,4 +1,4 @@
-{% extends "ra/base_site.html" %}
+{% extends "erp_framework/base_site.html" %}
 {% load i18n admin_urls static admin_modify jazzmin %}
 {% get_jazzmin_settings as jazzmin_settings %}
 {% block extrahead %}
