--- a/erp_framework/admin/templates/_ra/view.html
+++ b/erp_framework/admin/templates/_ra/view.html
@@ -1,5 +1,5 @@
 {% extends 'ra/base_site.html' %}
-{% load ra_admin_tags ra_tags i18n admin_urls %}
+{% load erp_reporting_tags ra_tags i18n admin_urls %}
 
 {% block content_title %} {{ title }}{% endblock %}
 {% block breadcrumbs %}
