--- a/erp_framework/admin/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/templates/erp_framework/base_site.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% load i18n static %}
-{% load jazzmin ra_admin_tags i18n %}
+{% load jazzmin erp_reporting_tags i18n %}
 
 {% block title %}{{ title|capfirst }} | {{ site_title|default:_('RA ERP') }}{% endblock %}
 
@@ -211,8 +211,10 @@
                                 </li>
                             {% endfor %}
                         {% endif %}
-                    </ul>
+
                     {% render_reports_menu %}
+                    </ul>
+
                 </nav>
             </div>
         </aside>
