--- a/erp_framework/admin/templates/erp_framework/reports_menu.html
+++ b/erp_framework/admin/templates/erp_framework/reports_menu.html
@@ -1,38 +1,41 @@
 {% load i18n %}
+{% load erp_reporting_tags %}
 
-
-<li class="nav-item nav-item-submenu {% if is_report %} menu-open {% endif %}">
-    <a class="nav-link {% if is_report %} active {% endif %}" href="">
+<li class="nav-header _nav-item-submenu {% if is_report %} menu-open {% endif %}">
+{#    <a class="nav-link {% if is_report %} active {% endif %}" href="">#}
         <i class="nav-icon fas fa-chart-line"> </i>
 
-        <p>
+{#        <p>#}
             {% trans 'Reports' %}
-{#            <i class="right fas fa-angle-left"></i>#}
-        </p>
+            {#            <i class="right fas fa-angle-left"></i>#}
+{#        </p>#}
 
-    </a>
-
-    <ul class="nav nav-group-sub" {% if is_report %} style="display: block" {% endif %}>
+{#    </a>#}
+</li>
+    <ul class="nav has-treeview" {% if is_report %} style="display: block" {% endif %}>
         {% for base_model, reports in base_models_reports_tuple %}
-            <li class="nav-item ">
+            <li class="nav-item    ">
                 <a href="{{ base_model.get_report_list_url }}"
-                   class="nav-link  {% if base_model.get_model_name == current_base_model_name %}active{% endif %}">
-{#                    <i class="far fa-circle nav-icon"></i>#}
-                    <p>{{ base_model.get_verbose_name_plural }} {{ base_model }}</p>
+                   class="nav-link  {% get_report_active_class base_model %} {% if base_model.get_model_name == current_base_model_name %}active{% endif %}">
+                    {#                    <i class="far fa-circle nav-icon"></i>#}
+                    <p>
+                        {% get_model_verbose_name_plural base_model %}
+                        <i class="fas fa-angle-left right"></i>
+                    </p>
                 </a>
-            <ul class="nav nav-group-sub"  {% if base_model.get_model_name == current_base_model_name %} style="display: block" {% endif %}>
-                {% for report in reports %}
-                    <li class="nav-item ">
-                        <a href="{{ report.get_absolute_url }}"
-                           class="nav-link  {% if report.get_report_slug == report_slug %}active{% endif %}">
-{#                            <i class="far fa-circle nav-icon"></i>#}
-                            <p>{{ report.report_title }}</p>
-                        </a>
-                    </li>
-                {% endfor %}
+                <ul class="nav nav-treeview" style="display: none">
+                    {% for report in reports %}
+                        <li class="nav-item ">
+                            <a href="{{ report.get_absolute_url }}"
+                               class="nav-link  {% if report.get_report_slug == report_slug %}active{% endif %}">
+                                {#                            <i class="far fa-circle nav-icon"></i>#}
+                                <p>{{ report.report_title }}</p>
+                            </a>
+                        </li>
+                    {% endfor %}
 
-            </ul>
+                </ul>
             </li>
         {% endfor %}
     </ul>
-</li>
+{#</li>#}
