--- a/erp_framework/admin/templates/ra/report_list.html
+++ b/erp_framework/admin/templates/ra/report_list.html
@@ -2,7 +2,7 @@
 {% load ra_tags crispy_forms_tags crispy_forms_field %}
 
 
-{% load i18n admin_urls static admin_modify ra_admin_tags %}
+{% load i18n admin_urls static admin_modify erp_reporting_tags %}
 
 {% block content_title %} {{ title }}{% endblock %}
 {% block breadcrumbs %}
