--- a/erp_framework/admin/templates/erp_framework/report.html
+++ b/erp_framework/admin/templates/erp_framework/report.html
@@ -1,6 +1,6 @@
 {% extends 'erp_framework/base_site.html' %}
 
-{% load crispy_forms_tags i18n slick_reporting_tags static %}
+{% load crispy_forms_tags i18n slick_reporting_tags static erp_reporting_tags %}
 
 
 {% block breadcrumbs %}
@@ -8,7 +8,7 @@
         <a href="{% url 'admin:index' %}" class="breadcrumb-item">
             <i class="icon-home2 mx-2"></i> {% trans 'Home' %} </a>
         <a class="breadcrumb-item"> {% trans 'Reports' %}</a>
-        <a class="breadcrumb-item"> {{ base_model.get_verbose_name_plural }}</a>
+        <a class="breadcrumb-item"> {% get_model_verbose_name_plural base_model %} </a>
         <a class="breadcrumb-item"> {{ title }}</a>
     </ul>
 
