--- a/erp_framework/admin/templates/erp_framework/view.html
+++ b/erp_framework/admin/templates/erp_framework/view.html
@@ -1,6 +1,5 @@
 {% extends 'erp_framework/base_site.html' %}
-{#{% extends "admin/base_site.html" %}#}
-{% load erp_reporting_tags ra_tags i18n admin_urls %}
+{% load i18n admin_urls %}
 
 {% block content_title %} {{ title }}{% endblock %}
 {% block breadcrumbs %}
