--- a/erp_framework/admin/templates/erp_framework/reversion/recover_form.html
+++ b/erp_framework/admin/templates/erp_framework/reversion/recover_form.html
@@ -1,4 +1,4 @@
-{% extends RA_THEME|add:"/reversion/revision_form.html" %}
+{% extends "admin/reversion/revision_form.html" %}
 {% load i18n admin_urls %}
 
 
