--- a/erp_framework/admin/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/templates/erp_framework/base_site.html
@@ -45,19 +45,23 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.20/datatables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/datatables.min.css"/>
 
+
     {#<script type="text/javascript" charset="utf8"#}
     {#        src="{{ STATIC_URL }}ra/js/vendor/datatables/extensions/FixedHeader/js/dataTables.fixedHeader.min.js"></script>#}
     {#<script type="text/javascript" src="{{ STATIC_URL }}ra/js/vendor/daterangepicker.js"></script>#}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
+
     <script src="{% static 'slick_reporting/ra.chartsjs.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css"/>
 
     <script type="text/javascript" src="{% static 'ra/js/ra.report_loader.js' %}"></script>
     <script type="text/javascript" src="{% static 'ra/js/ra.dataComprehension.js' %}"></script>
 
     <script src="{% static 'slick_reporting/main.js' %}"></script>
     <script src="{% static 'slick_reporting/ra.highchart.js' %}"></script>
+    <script src="{% static 'slick_reporting/ra.chartsjs.js' %}"></script>
 
 
 
@@ -201,6 +205,7 @@
                                         {% for model in app.models %}
                                             <li class="nav-item">
                                                 <a href="
+
 
                                                         {% if model.url %}{{ model.url }}{% else %}javascript:void(0){% endif %}"
                                                    class="nav-link">
