--- a/erp_framework/admin/templates/erp_framework/report_widget_template.html
+++ b/erp_framework/admin/templates/erp_framework/report_widget_template.html
@@ -1,27 +1,30 @@
 <div class="card">
-{% if no_title == True %}
-    <div class="card-header">
-        <h5 class="card-title">{{ report.get_report_title }}</h5>
+    {% if no_title == True %}
+        <div class="card-header">
+            <h5 class="card-title">{{ report.get_report_title }}</h5>
 
-        {#        <div class="heading-elements not-collapsible">#}
-        {#            {% include 'ra/snippets/chart_list_wrapper.html' with report=monthly_movement default_chart='total_movement_bar' %}#}
-        {#        </div>#}
-    </div>
+            {#        <div class="heading-elements not-collapsible">#}
+            {#            {% include 'ra/snippets/chart_list_wrapper.html' with report=monthly_movement default_chart='total_movement_bar' %}#}
+            {#        </div>#}
+        </div>
     {% endif %}
     <div class="card-body">
         <div data-report-widget
              data-report-url="{{ report.get_url }}"
              data-extra-params="{{ data_extra_param|default:'' }}"
              data-success-callback="{{ data_success_callback|default:'' }}"
-                {#             data-chart-id="{{ data_chart_id|default:'' }}"#}
+             data-chart-id="{{ data_chart_id|default:'' }}"
+             data-display-chart-selector="{{ data_display_chart_selector }}"
         >
             {% if report.chart_settings and not no_chart %}
                 <div id="container" data-report-chart style="width:100%; height:400px;"></div>
                 {#                <canvas data-report-chart height="100"></canvas>#}
             {% endif %}
-            <div data-report-table>
+            {% if no_table != True %}
+                <div data-report-table>
 
-            </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 
