Fixes widget title

--- a/erp_framework/admin/templates/erp_framework/report_widget_template.html
+++ b/erp_framework/admin/templates/erp_framework/report_widget_template.html
@@ -1,5 +1,5 @@
 <div class="card">
-    {% if no_title == True %}
+    {% if no_title != True %}
         <div class="card-header">
             <h5 class="card-title">{{ report.get_report_title }}</h5>
 
