--- a/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
@@ -138,7 +138,7 @@
 {% endblock %}
 
 
-{% block _sidebar %}
+{% block sidebar %}
     {% if jazzmin_settings.show_sidebar %}
         {% get_side_menu as side_menu_list %}
 
