--- a/erp_framework/admin/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/templates/erp_framework/base_site.html
@@ -30,7 +30,8 @@
 {#{% endblock %}#}
 
 {% block extrajs %}
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+{#    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>#}
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
