--- a/erp_framework/admin/templates/erp_framework/print_base.html
+++ b/erp_framework/admin/templates/erp_framework/print_base.html
@@ -41,7 +41,7 @@
                 "info": false,
                 "searching": false
             }
-            $.ra.datatable.buildAdnInitializeDatatable(data, $('.tableContainer'), extra_options);
+            $.erp_framework.datatable.buildAdnInitializeDatatable(data, $('.tableContainer'), extra_options);
             window.print();
 
         })
