--- a/erp_framework/admin/templates/erp_framework/report.html
+++ b/erp_framework/admin/templates/erp_framework/report.html
@@ -112,8 +112,8 @@
 
     {#    <script src="https://code.highcharts.com/highcharts.js"></script>#}
     <script src="{% static 'slick_reporting/main.js' %}"></script>
-    <script src="{% static 'slick_reporting/ra.chartsjs.js' %}"></script>
-    <script src="{% static 'slick_reporting/ra.highchart.js' %}"></script>
+    <script src="{% static 'slick_reporting/erp_framework.chartsjs.js' %}"></script>
+    <script src="{% static 'slick_reporting/erp_framework.highchart.js' %}"></script>
 
 
     <script>
@@ -129,7 +129,7 @@
             $('.refreshReport').on('click', function (event) {
                 event.preventDefault();
                 let $elem = $('[data-report-widget]')
-                $.ra.report_loader.refreshReportWidget($elem)
+                $.erp_framework.report_loader.refreshReportWidget($elem)
             });
 
 
