--- a/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
@@ -30,113 +30,7 @@
 {#{% endblock %}#}
 
 {% block extrajs %}
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
-
-    <script type="text/javascript" src="{% static "erp_framework/js/erp_framework.js" %}"></script>
-
-    <script>
-        $.erp_framework.rtl = {% if LANGUAGE_BIDI %} true ;{% else %} false; {% endif %}
-        $.erp_framework.defaults.messages.total = "Total";
-    </script>
-
-
-
-    <script type="text/javascript" src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap4.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap4.min.css"/>
-
-
-    {#<script type="text/javascript" charset="utf8"#}
-    {#        src="{{ STATIC_URL }}erp_framework/js/vendor/datatables/extensions/FixedHeader/js/dataTables.fixedHeader.min.js"></script>#}
-    {#<script type="text/javascript" src="{{ STATIC_URL }}erp_framework/js/vendor/daterangepicker.js"></script>#}
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-
-
-    <script src="{% static 'slick_reporting/erp_framework.chartsjs.js' %}"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css"/>
-
-    <script type="text/javascript" src="{% static 'erp_framework/js/erp_framework.report_loader.js' %}"></script>
-    {#    <script type="text/javascript" src="{% static 'erp_framework/js/erp_framework.dataComprehension.js' %}"></script>#}
-
-    <script src="{% static 'slick_reporting/main.js' %}"></script>
-    <script src="{% static 'slick_reporting/erp_framework.highchart.js' %}"></script>
-    <script src="{% static 'slick_reporting/erp_framework.chartsjs.js' %}"></script>
-
-
-
-    <script src="{% static 'erp_framework/js/erp_framework.datatable.js' %}"></script>
-
-
-    <script>
-        {#$.extend($.fn.dataTable.defaults, {#}
-        {#    "oLanguage": {#}
-        {##}
-        {#        "oAria": {#}
-        {#            "sSortDescending": ": activate to sort column descending"#}
-        {#        },#}
-        {#        "oPaginate": {#}
-        {#            "sFirst": "{% trans "First" %}",#}
-        {#            "sLast": "{% trans "Last" %}",#}
-        {#            "sNext": "{% trans "Next" %}",#}
-        {#            "sPrevious": "{% trans "Previous" %}"#}
-        {#        },#}
-        {#        "sEmptyTable": "{% trans "No data available here yet." %}",#}
-        {#        {% if LANGUAGE_BIDI %}#}
-        {#            "sInfo": '',#}
-        {#        {% else %}#}
-        {#            "sInfo": "{% trans "Showing _START_ to _END_ of _TOTAL_ entries" %}",#}
-        {#        {% endif %}#}
-        {#        "sInfoEmpty": "{% trans "Nothing found" %}",#}
-        {#        "sInfoFiltered": "{% trans "(filtered from _MAX_ total entries)" %}",#}
-        {#        "sInfoPostFix": "",#}
-        {#        "sInfoThousands": ",",#}
-        {#        "sLengthMenu": "{% trans "Show _MENU_ entries" %}",#}
-        {#        "sLoadingRecords": "{% trans "Loading..." %}",#}
-        {#        "sProcessing": "{% trans "Processing..." %}",#}
-        {#        "sSearch": "{% trans "Search" %}:",#}
-        {#        "sUrl": "",#}
-        {#        "sZeroRecords": "{% trans "No matching records found" %}"#}
-        {#    },#}
-        {##}
-        {#        // added by theme #}
-        {#    autoWidth: false,#}
-        {#    columnDefs: [{#}
-        {#        orderable: false,#}
-        {#        width: '100px',#}
-        {#    }],#}
-        {#    dom: '<"datatable-header"fl><"datatable-scroll"t><"datatable-footer"ip>',#}
-        {#    language: {#}
-        {#        search: '<span>{% trans 'Filter' %}:</span> _INPUT_',#}
-        {#        searchPlaceholder: '{% trans "Type to filter" %}...',#}
-        {#        lengthMenu: '<span>{% trans 'Show' %}:</span> _MENU_',#}
-        {#        paginate: {'first': 'First', 'last': 'Last', 'next': '&rarr;', 'previous': '&larr;'}#}
-        {#    },#}
-        {#drawCallback: function () {#}
-        {#    $(this).find('tbody tr').slice(-3).find('.dropdown, .btn-group').addClass('dropup');#}
-        {# },#}
-        {#preDrawCallback: function () {#}
-        {#    $(this).find('tbody tr').slice(-3).find('.dropdown, .btn-group').removeClass('dropup');#}
-        {# }#}
-        {# });#}
-
-        $.erp_framework.defaults.messages.total = "{% trans "Total" %}"
-
-        jQuery(document).ready(function () {
-            $('.page-container').show();
-            {# RA_Main.init(); #}
-            $.erp_framework.focus_first();
-            $.erp_framework.report_loader.initialize();
-            $('#changelist-form table').addClass('table table-hover table-striped table-condensed table-bordered')
-
-        });
-    </script>
-
+    {% include "erp_framework/js_resources.html" %}
 {% endblock %}
 
 
@@ -211,6 +105,7 @@
                                         {% for model in app.models %}
                                             <li class="nav-item">
                                                 <a href="
+
 
 
 
