Make default menu flat Simplifications

--- a/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
@@ -116,7 +116,7 @@
                             {% endfor %}
                         {% endif %}
 
-                        {% render_reports_menu template_name="request_analytics/menu.html" %}
+                        {% render_reports_menu template_name="reporting/flat_menu.html" %}
                     </ul>
 
                 </nav>
