--- a/erp_framework/admin/templates/erp_framework/reports_menu.html
+++ b/erp_framework/admin/templates/erp_framework/reports_menu.html
@@ -15,7 +15,7 @@
     <ul class="nav has-treeview" {% if is_report %} style="display: block" {% endif %}>
         {% for base_model, reports in base_models_reports_tuple %}
             <li class="nav-item    ">
-                <a href="{{ base_model.get_report_list_url }}"
+                <a href=""
                    class="nav-link  {% get_report_active_class base_model %} {% if base_model.get_model_name == current_base_model_name %}active{% endif %}">
                     {#                    <i class="far fa-circle nav-icon"></i>#}
                     <p>
