New ``get_widget`` Allow custom base_site template

--- a/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends admin_base_site_template %}
 {% load i18n static %}
 {% load jazzmin erp_reporting_tags i18n %}
 
