--- a/tests/reporting_tests/templates/client_view.html
+++ b/tests/reporting_tests/templates/client_view.html
@@ -26,6 +26,10 @@
         <div data-report-table></div>
     </div>
 
+    {% get_widget client_sales_of_products %}
+
+    {% get_html_panel client_sales_of_products %}
+
 {% endblock %}
 {% block extra_js %}
     <script>
