--- a/erp_framework/admin/templates/erp_framework/_reports_menu.html
+++ b/erp_framework/admin/templates/erp_framework/_reports_menu.html
@@ -19,7 +19,7 @@
                    class="nav-link  {% get_report_active_class base_model %} {% if base_model.get_model_name == current_base_model_name %}active{% endif %}">
                     {#                    <i class="far fa-circle nav-icon"></i>#}
                     <p>
-                        {% get_model_verbose_name_plural base_model %}
+{#                        {% get_model_verbose_name_plural base_model %}#}
                         <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
