Allow having different base template for dashboard / admin sites Introduce get_report_url Keep Order of reports on display

--- a/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
@@ -1,4 +1,5 @@
-{% extends admin_base_site_template %}
+{% extends admin_base_site_template|default:"admin/base.html" %}
+
 {% load i18n static %}
 {% load jazzmin erp_reporting_tags i18n %}
 
