--- a/erp_framework/reporting/templates/reporting/flat_menu.html
+++ b/erp_framework/reporting/templates/reporting/flat_menu.html
@@ -4,7 +4,7 @@
     {%  for report in reports %}
         {% is_active_report report as is_active %}
           <li class="nav-item">
-            <a class="nav-link {% if is_active  %}active{% endif %}" href="{{ report.get_url }}">
+            <a class="nav-link {% if is_active  %}active{% endif %}" href="{% get_report_url report %}">
                 {{ report.get_report_title }} <span class="sr-only">(current)</span>
             </a>
           </li>
