--- a/tests/reporting_tests/templates/client_view.html
+++ b/tests/reporting_tests/templates/client_view.html
@@ -6,7 +6,7 @@
     <h2>Balance is <span class="clientBalance"></span></h2>
     {% get_report base_model='reporting_tests' report_slug='balances' as client_balances %}
     <div data-report-widget
-         data-report-url="{{ client_balances.get_url }}"
+         data-report-url="{% get_report_url client_balances %}"
          data-extra-params="&client_id={{ original.pk }}"
          data-success-callback="displayBalance">
 
@@ -19,7 +19,7 @@
 
     {% get_report base_model='reporting_tests' report_slug='client_sales_of_products' as client_sales_of_products %}
     <div data-report-widget
-         data-report-url="{{ client_sales_of_products.get_url }}"
+         data-report-url="{% get_report_url client_sales_of_products %}"
          data-extra-params="&client_id={{ original.pk }}">
 
         <div data-report-chart></div>
