Fix in report view base template

--- a/erp_framework/admin/templates/erp_framework/report.html
+++ b/erp_framework/admin/templates/erp_framework/report.html
@@ -1,4 +1,4 @@
-{% extends base_template %}
+{% extends 'erp_framework/base_site.html' %}
 
 {% load crispy_forms_tags i18n static erp_reporting_tags %}
 
