--- a/erp_framework/admin/templates/erp_framework/report.html
+++ b/erp_framework/admin/templates/erp_framework/report.html
@@ -34,8 +34,8 @@
                     <div class="card-body">
                         <div data-report-widget
                              data-report-url="{% get_report_url report %}"
-                             data-extra-params="{{ data_extra_param|default:'' }}"
-                             data-success-callback="{{ data_success_callback|default:'' }}"
+                             data-extra-params=""
+                             data-success-callback=""
 
                              report-form-selector="#reportForm"
 
