--- a/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
+++ b/erp_framework/admin/jazzmin_integration/templates/erp_framework/base_site.html
@@ -116,7 +116,7 @@
                                 </li>
                             {% endfor %}
                         {% endif %}
-
+                        <li class="nav-header">{% translate "Reports" %}</li>
                         {% render_reports_menu template_name="reporting/flat_menu.html" %}
                     </ul>
 
